Tweak title of Docker setup

--- a/building/config.json
+++ b/building/config.json
@@ -714,7 +714,7 @@
     "uuid": "fb41198b-90ac-4148-afcc-f012418c6396",
     "slug": "tooling/docker",
     "path": "building/tooling/docker.md",
-    "title": "Tooling Docker Setup",
+    "title": "Docker Setup",
     "blurb": ""
   },
   {
